# ecal_core

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml  run_docker.sh
config/: calibration.docker.yaml  calibration.yaml
include/ecal/core/: checkerboard_calibration.hpp  checkerboard_validity.hpp  cm_tracker_2d.hpp  cm_velocity_2d.hpp  corner_init.hpp  corner_refinement.hpp  iwe_gaussian.hpp  patch_extractor.hpp  simple_event.hpp
include/ecal/io/: calibration_config.hpp  calibration_output.hpp  h5_events.hpp
include/ecal/viz/: calibration_report.hpp  calibration_viz.hpp  event_render.hpp
include/ecal_core/core/: cm_tracker_2d.hpp  cm_velocity_2d.hpp  patch_extractor.hpp
include/ecal_core/viz/: event_render.hpp
src/app/: calibration_main.cpp
src/core/: checkerboard_calibration.cpp  checkerboard_validity.cpp  cm_tracker_2d.cpp  cm_velocity_2d.cpp  corner_init.cpp  corner_refinement.cpp  iwe_gaussian.cpp  patch_extractor.cpp
src/io/: calibration_config.cpp  calibration_output.cpp  h5_events.cpp
src/viz/: calibration_report.cpp  calibration_viz.cpp  event_render.cpp
